--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </div>
 <div align="center">
     <div class="ets-link-footer">
-        <a class="ets-link-github"></a>
+        <a class="ets-link-github" href="https://github.com/etigerstudio"></a>
         <span class="ets-copyright">Copyright 2018</span>
     </div>
 </div>
