update: link ‘My Projects’ card to GitHub profile.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="cell large-5 medium-5 small-12 ets-card-hidden ets-card-container ets-slow-animated" id="right-col">
-            <a href="#" class="ets-link-wrapper">
+            <a href="https://github.com/etigerstudio" class="ets-link-wrapper">
                 <div class="ets-card ets-animated">
                     <div class="ets-card-arrow"></div>
                     <div class="ets-card-icon ets-icon-hammer"></div>
