vendor: back all major resources with cdn.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Tiger Studio 易虎工作室</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
-    <link rel="stylesheet" href="css/ets-home.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/css/ets-home.css">
 </head>
 <body>
 <div class="grid-container full">
     <div class="grid-x ets-grid-container align-middle">
         <div class="cell medium-auto small-12" align="center">
-            <img src="img/e-tigerstudio.png" class="ets-hero-logo">
-            <img src="img/introduction.svg" class="ets-introduction">
+            <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/e-tigerstudio.png" class="ets-hero-logo">
+            <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/introduction.svg" class="ets-introduction">
             <div class="ets-link-header">
                 <a href="https://github.com/etigerstudio" class="ets-link-github"></a>
                 <span class="ets-copyright">Copyright 2018</span>
@@ -57,6 +57,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/what-input@5.1.0/dist/what-input.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js"></script>
-<script src="js/app.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/js/app.js"></script>
 </body>
 </html>
