update: copyright info to 2019.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div align="center">
     <div class="ets-link-footer">
         <a class="ets-link-github" href="https://github.com/etigerstudio"></a>
-        <span class="ets-copyright">Copyright 2018</span>
+        <span class="ets-copyright">Copyright 2018-19</span>
     </div>
 </div>
 
