update: copyright layout & color scheme.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/introduction.svg" class="ets-introduction">
             <div class="ets-link-header">
                 <a href="https://github.com/etigerstudio" class="ets-link-github"></a>
-                <span class="ets-copyright">Copyright 2018</span>
+                <div class="ets-copyright">Copyright 2018-19</div>
             </div>
         </div>
         <div class="cell large-5 medium-5 small-12 ets-card-hidden ets-card-container ets-slow-animated" id="right-col">
@@ -33,7 +33,7 @@
                     <div class="ets-card-arrow"></div>
                     <div class="ets-card-icon ets-icon-code"></div>
                     <span class="ets-card-header">技术博客</span>
-                    <p>美味开发、设计八卦菜谱。</p>
+                    <p>美味的设计、开发八卦菜谱。</p>
                 </div>
             </a>
             <a href="https://feverfree.etiger.studio" class="ets-link-wrapper">
@@ -50,7 +50,7 @@
 <div align="center">
     <div class="ets-link-footer">
         <a class="ets-link-github" href="https://github.com/etigerstudio"></a>
-        <span class="ets-copyright">Copyright 2018-19</span>
+        <div class="ets-copyright">Copyright 2018-19</div>
     </div>
 </div>
 
