add: favicon & ios home screen icon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Tiger Studio 易虎工作室</title>
+    <link rel="icon" sizes="256x256" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/img/favicon.png">
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/img/ios-icon.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="E-Tiger Studio">
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/css/ets-home.css">
 </head>
