vendor: remove unnecessary latest version tag.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Tiger Studio 易虎工作室</title>
-    <link rel="icon" sizes="256x256" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/img/favicon.png">
-    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/img/ios-icon.png">
+    <link rel="icon" sizes="256x256" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/favicon.png">
+    <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/ios-icon.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="E-Tiger Studio">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/css/ets-home.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/css/ets-home.css">
 </head>
 <body>
 <div class="grid-container full">
     <div class="grid-x ets-grid-container align-middle">
         <div class="cell medium-auto small-12" align="center">
-            <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/img/e-tigerstudio.png" class="ets-hero-logo">
-            <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/img/introduction.svg" class="ets-introduction">
+            <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/e-tigerstudio.png" class="ets-hero-logo">
+            <img src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/img/introduction.svg" class="ets-introduction">
             <div class="ets-link-header">
                 <a href="https://github.com/etigerstudio" class="ets-link-github"></a>
                 <div class="ets-copyright">Copyright 2018-19</div>
@@ -63,6 +63,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/what-input@5.1.0/dist/what-input.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site@latest/js/app.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/etigerstudio/etigerstudio-site/js/app.js"></script>
 </body>
 </html>
