update: copyright info to 2022; move `under construction` down.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="ets-card ets-animated">
                     <div class="ets-card-arrow"></div>
                     <div class="ets-card-icon ets-icon-code"></div>
-                    <span class="ets-card-header">技术博客(建设中)</span>
-                    <p>美味的设计、开发八卦菜谱。</p>
+                    <span class="ets-card-header">技术博客</span>
+                    <p>美味的设计、开发八卦菜谱。 - 在建中</p>
                 </div>
             </a>
             <a href="https://feverfree.etiger.studio" class="ets-link-wrapper">
@@ -56,7 +56,7 @@
 <div align="center">
     <div class="ets-link-footer">
         <a class="ets-link-github" href="https://github.com/etigerstudio"></a>
-        <div class="ets-copyright">Copyright 2018-20</div>
+        <div class="ets-copyright">Copyright 2018-22</div>
     </div>
 </div>
 
